--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <article class = 'info-long'>
                     <div class = 'info-long-right'>
                         <h3>Добро пожаловать!</h3>
-                        <p>На этой странице Вы найдете полную информацию о моих профессиональных навыках и компетенциях. Для связи со мной можно воспользоваться любой из доступных <a href="#">социальных сетей</a></p>
+                        <p>На этой странице Вы найдете информацию о моих профессиональных навыках и компетенциях. Для связи со мной можно воспользоваться любой из доступных <a class = 'soc-net' href="#">социальных сетей</a></p>
                     </div>
                 </article>
             </section>
@@ -102,10 +102,10 @@
                         </ul>
                     </div>
                     <div class = 'info-long-right'>
-                        <a href="#">DAAD</a>
-                        <a href="#">DAAD</a>
-                        <a href="#">DAAD</a>
-                        <a href="#">DAAD</a>
+                        <a href="https://replit.com/@ekaterinashcheg/Python-card-game">Card Game</a>
+                        <a href="https://codepen.io/qjsddmdh-the-flexboxer/pen/wvbmzgx">Let's count!</a>
+                        <a href="https://replit.com/@ekaterinashcheg/BelovedVioletAtoms">Conventer</a>
+                        <a href="https://github.com/EkaterinaSc/Resume">Le résumé</a>
                     </div>
                 </article>
             </section>
@@ -113,7 +113,7 @@
                 <article class = 'info-short'>
                     <h2 class = 'article-title'>КОНТАКТЫ</h2>
                 </article>
-                <article class = 'info-long'>
+                <article class = 'info-long-contact'>
                     <div class = 'contact-wrapper'>
                         <form class = 'contact-form' action="" method="get">
                             <label class = 'label'>
@@ -145,7 +145,19 @@
             </section>
         </div>
     </section>
-
+    <footer>
+        <div class = 'footer-wrapper'>
+            <div class = 'footer-image'>
+                <img class = 'cat' src="./images/cat.svg" alt="">
+            </div>
+            <div class = 'footer-contact'>
+                <a href="#"><img class = 'svg' src="./images/icon email.svg" alt="email"></a>
+                <a href="#"><img class = 'svg'src="./images/icon location.svg" alt="adress"></a>
+                <a href="#"><img class = 'svg'src="./images/icon phone.svg" alt="tel"></a>
+                <a href=""><img class = 'svg'src="./images/ResearchGate_icon_SVG.svg" alt="rg"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="./index.js"></script>
 </html>
